litmask/tests/compile/maskfmt_too_few_args.rs
//! ôÏ2.2.3.2: `maskfmt!` rejects placeholders that reference an
//! argument index beyond the supplied positional list.

use litmask::maskfmt;

fn main() {
    let _ = maskfmt!("{} {} {}", "only-one");
}
